--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
     <div>  
 
     <form class="Formulario">
-        <h3>Cadastro</h3>
+        <h3 id="coiso">Cadastro</h3>
         <input type="text" placeholder="Login" id="email">
         <input type="tel" placeholder="Número de Telefone" id="telefone">
         <input type="password" placeholder="Senha" id="senha">
