--- a/Index.html
+++ b/Index.html
@@ -5,20 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site de Streaming</title>
     <link rel="stylesheet" href="Style.css">
+    <script src="Script.js" defer></script>
 </head>
 <body>
-
-
-    <div>  
-
+<div>  
     <form class="Formulario">
-        <h3 id="coiso">Cadastro</h3>
-        <input type="text" placeholder="Login" id="email">
-        <input type="tel" placeholder="Número de Telefone" id="telefone">
-        <input type="password" placeholder="Senha" id="senha">
-        <input type="submit" onclick="logar(); return false" id="botao">
+        <h3 id="coiso">STREAMVERSE</h3>
+        <input type="text" placeholder="Login" id="email" class="Texto-usuario">
+        <input type="password" placeholder="Senha" id="senha" class="Texto-usuario">
+        <input type="submit" onclick="Logar(); return false" id="botao" class="Texto-usuario">
     </form>
-
 </div>
 </body>
 </html>
