--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,9 @@
 <div>  
     <form class="Formulario">
         <h3 id="coiso">STREAMVERSE</h3>
+        <p>Email</p>
         <input type="text" placeholder="Login" id="email" class="Texto-usuario">
+        <p>Senha</p>
         <input type="password" placeholder="Senha" id="senha" class="Texto-usuario">
         <input type="submit" onclick="Logar(); return false" id="botao" class="Texto-usuario">
     </form>
