--- a/Index.html
+++ b/Index.html
@@ -10,12 +10,11 @@
 <body>
 <div>  
     <form class="Formulario">
-        <h3 id="coiso">STREAMVERSE</h3>
-        <p>Email</p>
-        <input type="text" placeholder="Login" id="email" class="Texto-usuario">
-        <p>Senha</p>
-        <input type="password" placeholder="Senha" id="senha" class="Texto-usuario">
-        <input type="submit" onclick="Logar(); return false" id="botao" class="Texto-usuario">
+            <h3 id="coiso">STREAMVERSE</h3>
+            <input type="text" placeholder="Login" id="email" class="Texto-usuario">
+            <input type="password" placeholder="Senha" id="senha" class="Texto-usuario">
+            <input type="tel" placeholder="Telefone" id="Phone" class="Texto-usuario">
+            <input type="submit" onclick="Logar(); return false" id="botao" class="Texto-usuario">
     </form>
 </div>
 </body>
