--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 <div>  
     <form class="Formulario">
             <h3 id="coiso">STREAMVERSE</h3>
-            <input type="text" placeholder="Login" id="email" class="Texto-usuario">
+            <input type="email" placeholder="Email" id="email" class="Texto-usuario">
             <input type="password" placeholder="Senha" id="senha" class="Texto-usuario">
             <input type="tel" placeholder="Telefone" id="Phone" class="Texto-usuario">
             <input type="submit" onclick="Logar(); return false" id="botao" class="Texto-usuario">
