--- a/Streaming-home/Home.html
+++ b/Streaming-home/Home.html
@@ -22,23 +22,23 @@
                 <h4 id="description">Elisabeth Sparkle, renomada por um programa de aeróbica, enfrenta um golpe devastador quando seu chefe a demite. Em meio ao seu desespero, um laboratório lhe oferece uma substância que promete transformá-la em uma versão aprimorada.</h3>
             </div>
         </section>
-        <p class="section-title">Filmes de comédia</p>
+        <p class="section-title">Filmes de comédia e animação</p>
         <section id="comedy" class="movies-container">
-            <img src="Images/No-image-selected.png" alt="Capa do filme de comédia" id="comedy1" class="movie">
-            <img src="Images/No-image-selected.png" alt="Capa do filme de comédia" id="comedy2" class="movie">
-            <img src="Images/No-image-selected.png" alt="Capa do filme de comédia" id="comedy3" class="movie">
-            <img src="Images/No-image-selected.png" alt="Capa do filme de comédia" id="comedy4" class="movie">
+            <img src="Images/Divertidamente2-banner.jpeg" alt="Capa do filme de comédia" id="comedy1" class="movie">
+            <img src="Images/Moana2-banner.jpg" alt="Capa do filme de comédia" id="comedy2" class="movie">
+            <img src="Images/Up-altas-aventuras-banner.jpg" alt="Capa do filme de comédia" id="comedy3" class="movie">
+            <img src="Images/Red-banner.jpg" alt="Capa do filme de comédia" id="comedy4" class="movie">
         </section>
         <p class="section-title">Filmes de ação</p>
         <section id="action" class="movies-container">
-            <img src="Images/No-image-selected.png" alt="Capa do filme de ação" id="action1" class="movie">
+            <img src="Images/Avatar2-banner.jfif" alt="Capa do filme de ação" id="action1" class="movie">
             <img src="Images/No-image-selected.png" alt="Capa do filme de ação" id="action2" class="movie">
             <img src="Images/No-image-selected.png" alt="Capa do filme de ação" id="action3" class="movie">
             <img src="Images/No-image-selected.png" alt="Capa do filme de ação" id="action4" class="movie">
         </section>
         <p class="section-title">Filmes de Terror</p>
         <section id="horror" class="movies-container">
-            <img src="Images/No-image-selected.png" alt="Capa do filme de terror" id="horror1" class="movie">
+            <img src="Images/Jurassic-park-banner.jfif" alt="Capa do filme de terror" id="horror1" class="movie">
             <img src="Images/No-image-selected.png" alt="Capa do filme de terror" id="horror2"class="movie">
             <img src="Images/No-image-selected.png" alt="Capa do filme de terror" id="horror3"class="movie">
             <img src="Images/No-image-selected.png" alt="Capa do filme de terror" id="horror4" class="movie">
