--- a/Streaming-home/Home.html
+++ b/Streaming-home/Home.html
@@ -32,16 +32,16 @@
         <p class="section-title">Filmes de ação</p>
         <section id="action" class="movies-container">
             <img src="Images/Avatar2-banner.jfif" alt="Capa do filme de ação" id="action1" class="movie">
-            <img src="Images/No-image-selected.png" alt="Capa do filme de ação" id="action2" class="movie">
-            <img src="Images/No-image-selected.png" alt="Capa do filme de ação" id="action3" class="movie">
-            <img src="Images/No-image-selected.png" alt="Capa do filme de ação" id="action4" class="movie">
+            <img src="Images/Indiana-Jones-and-the-Great-Circle.jpg" alt="Capa do filme de ação" id="action2" class="movie">
+            <img src="Images/Cobra-kai-banenr.jpeg" alt="Capa do filme de ação" id="action3" class="movie">
+            <img src="Images/Piratas-do-caribe-banner.jpg" alt="Capa do filme de ação" id="action4" class="movie">
         </section>
         <p class="section-title">Filmes de Terror</p>
         <section id="horror" class="movies-container">
             <img src="Images/Jurassic-park-banner.jfif" alt="Capa do filme de terror" id="horror1" class="movie">
-            <img src="Images/No-image-selected.png" alt="Capa do filme de terror" id="horror2"class="movie">
-            <img src="Images/No-image-selected.png" alt="Capa do filme de terror" id="horror3"class="movie">
-            <img src="Images/No-image-selected.png" alt="Capa do filme de terror" id="horror4" class="movie">
+            <img src="Images/annabelle-banner.jpg" alt="Capa do filme de terror" id="horror2"class="movie">
+            <img src="Images/coraline-banner.jpeg" alt="Capa do filme de terror" id="horror3"class="movie">
+            <img src="Images/Casa-monstro-banner.jpeg" alt="Capa do filme de terror" id="horror4" class="movie">
         </section>
     </div>
 </body>
